# argos

./: .gitignore  Argos.entitlements  Makefile  PLAN.md  PROJECT.md  Package.swift  README.md
Sources/Argos/: ArgosApp.swift  DisplayAnchor.swift  DisplayFinder.swift  GlassesManager.swift  Info.plist  OverlayWindow.swift  ScreenCaptureManager.swift  SettingsView.swift  VirtualDisplayManager.swift
Sources/ArgosDriver/: VirtualDisplay.m  stub.c
Sources/ArgosDriver/include/: ArgosDriverBridge.h  CGVirtualDisplayBridge.h
docs/: architecture.md
driver/: Cargo.toml
driver/src/: lib.rs
