[package]
name = "argos-driver"
version = "0.1.0"
edition = "2021"
description = "USB HID driver for Xreal Air 2 Pro — reads IMU and controls display"

[lib]
name = "argos_driver"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# AR glasses driver — supports Xreal Air 2 Pro
ar-drivers = { git = "https://github.com/badicsalex/ar-drivers-rs", features = ["nreal"] }

# USB HID access
hidapi = "2.6"

# Sensor fusion for stable orientation output
nalgebra = "0.32"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
